Fix por filtro de categorías